# pidgin

./: .cvsignore  .gitignore  .hgignore  .hgtags  .mtn-ignore  .todo  AUTHORS  BUGS  COPYRIGHT  ChangeLog  ChangeLog.API  ChangeLog.win32  Doxyfile.in  FIXME  HACKING  INSTALL  Makefile.am  Makefile.in  Makefile.mingw  NEWS  PLUGIN_HOWTO  PROGRAMMING_NOTES  PRPL  README  README.CVS  README.MTN  README.SVN  README.dbus  README.hg  README.mingw  README.plugins  STATUS  TODO  VERSION  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  bitbucket-pipelines.yml  buddytrans  (+43 more)
console/: Makefile  Makefile.am  gntaccount.c  gntaccount.h  gntblist.c  gntblist.h  gntconn.c  gntconn.h  gntconv.c  gntconv.h  gntdebug.c  gntdebug.h  gntft.c  gntft.h  gntgaim.c  gntgaim.h  gntidle.c  gntidle.h  gntnotify.c  gntnotify.h  gntplugin.c  gntplugin.h  gntpounce.c  gntpounce.h  gntprefs.c  gntprefs.h  gntrequest.c  gntrequest.h  gntstatus.c  gntstatus.h  gntui.c  gntui.h
doc/: .cvsignore  C-HOWTO.dox  CREDITS  ChangeLog.API  FAQ  HOWTO  MSN-PROTOCOL  Makefile.am  Makefile.in  PERL-HOWTO.dox  PROTOCOL  README.plugins  SIGNAL-HOWTO.dox  TCL-HOWTO.dox  TracHeader.html  account-signals.dox  blist-signals.dox  buddyicon-signals.dox  certificate-signals.dox  cipher-signals.dox  connection-signals.dox  conversation-signals.dox  core-signals.dox  dbus-server-signals.dox  finch.1.in  funniest_home_convos.txt  gaim-remote.1  gaim-remote.1.in  gaim-text.1.in  gaim.1  gaim.1.in  gaims_funniest_home_convos.txt  gntgaim.1.in  gtkaccount-signals.dox  gtkblist-signals.dox  gtkconv-signals.dox  gtkimhtml-signals.dox  gtklog-signals.dox  gtkrc-2.0  imgstore-signals.dox  (+15 more)
finch/: Makefile.am  Makefile.in  finch-rename.c  finch.c  finch.h  finch.pc.in  finch_winres.rc.in  getopt.c  getopt.h  getopt1.c  gntaccount.c  gntaccount.h  gntblist.c  gntblist.h  gntcertmgr.c  gntcertmgr.h  gntconn.c  gntconn.h  gntconv.c  gntconv.h  gntdebug.c  gntdebug.h  gntfinch.c  gntft.c  gntft.h  gntgaim.c  gntidle.c  gntidle.h  gntlog.c  gntlog.h  gntmedia.c  gntmedia.h  gntmenuutil.c  gntmenuutil.h  gntnotify.c  gntnotify.h  gntplugin.c  gntplugin.h  gntpounce.c  gntpounce.h  (+17 more)
gtk/: Makefile.am  Makefile.mingw  docklet-x11.c  eggtrayicon.c  gaimcombobox.c  gaimcombobox.h  gaimstock.c  gaimstock.h  getopt.h  gtkaccount.c  gtkblist.c  gtkblist.h  gtkcellrendererexpander.c  gtkcellrendererexpander.h  gtkcellrendererprogress.h  gtkconn.c  gtkconv.c  gtkconv.h  gtkconvwin.h  gtkdebug.c  gtkdialogs.c  gtkdnd-hints.c  gtkdocklet-x11.c  gtkdocklet.c  gtkdocklet.h  gtkeventloop.c  gtkeventloop.h  gtkexpander.c  gtkft.c  gtkft.h  gtkgaim.h  gtkimhtml.c  gtkimhtml.h  gtkimhtmltoolbar.c  gtklog.c  gtklog.h  gtkmain.c  gtkmenutray.h  gtknotify.c  gtkplugin.c  (+22 more)
libfaim/: AUTHORS  BUGS  CHANGES  CHANGES.gaim  Makefile.am  README  README.gaim  admin.c  aim.h  aim_ads.c  aim_auth.c  aim_buddylist.c  aim_chat.c  aim_chatnav.c  aim_conn.c  aim_ft.c  aim_global.c  aim_im.c  aim_info.c  aim_internal.h  aim_login.c  aim_logoff.c  aim_meta.c  aim_misc.c  aim_msgcookie.c  aim_rxhandlers.c  aim_rxqueue.c  aim_search.c  aim_snac.c  aim_tlv.c  aim_txqueue.c  aim_util.c  auth.c  bos.c  buddylist.c  chat.c  chatnav.c  conn.c  faimconfig.h  ft.c  (+16 more)
libgaim/: Makefile.am  Makefile.mingw  account.c  account.h  blist.c  blist.h  buddyicon.c  buddyicon.h  circbuffer.c  connection.c  connection.h  conversation.c  conversation.h  core.c  dbus-analyze-functions.py  dbus-bindings.h  dbus-gaim.h  dbus-maybe.h  dbus-server.c  dbus-useful.c  debug.h  dnsquery.c  dnsquery.h  dnssrv.c  dnssrv.h  eventloop.c  eventloop.h  ft.c  ft.h  gaim-remote  gaim-url-handler  getopt1.c  idle.c  idle.h  internal.h  log.c  network.c  network.h  notify.c  notify.h  (+30 more)
libpurple/: Makefile.am  Makefile.in  Makefile.mingw  account-manager.c  account-manager.h  account.c  account.h  accountopt.c  accountopt.h  accounts.c  accounts.h  blist.c  blist.h  blistnode.c  blistnode.h  blistnodes.c  blistnodes.h  blistnodetypes.c  blistnodetypes.h  buddy.c  buddy.h  buddyicon.c  buddyicon.h  buddylist.c  buddylist.h  certificate.c  certificate.h  chat.c  chat.h  cipher.c  cipher.h  circbuffer.c  circbuffer.h  circularbuffer.c  circularbuffer.h  cmds.c  cmds.h  connection.c  connection.h  contact.c  (+205 more)
pidgin/: Makefile.am  Makefile.in  Makefile.mingw  about.html  about.md  about.ui  contributors.json  credits.json  developers.json  eggtrayicon.c  eggtrayicon.h  gaimcombobox.c  gaimcombobox.h  gaimstock.c  gaimstock.h  getopt.c  getopt.h  getopt1.c  gtk3compat.h  gtkaccount.c  gtkaccount.h  gtkblist-loader.c  gtkblist-loader.h  gtkblist-theme-loader.c  gtkblist-theme-loader.h  gtkblist-theme.c  gtkblist-theme.h  gtkblist.c  gtkblist.h  gtkcelllayout.c  gtkcelllayout.h  gtkcellrendererexpander.c  gtkcellrendererexpander.h  gtkcellrendererprogress.c  gtkcellrendererprogress.h  gtkcellview.c  gtkcellview.h  gtkcellviewmenuitem.c  gtkcellviewmenuitem.h  gtkcertmgr.c  (+130 more)
pixmaps/: Makefile.am  Makefile.mingw  about_small.xpm  add.xpm  add_small.xpm  admin_icon.xpm  aimicon.xpm  aimicon2.xpm  angel.xpm  aol_icon.xpm  arrow_down.xpm  arrow_right.xpm  available-away.xpm  available-chat.xpm  available-dnd.xpm  available-error.xpm  available-xa.xpm  available.xpm  away.xpm  away_big.xpm  away_icon.xpm  away_small.xpm  bgcolor.xpm  big.xpm  bigsmile.xpm  block.xpm  block_small.xpm  bold.xpm  broken.xpm  bsmile.xpm  buddyadd.xpm  buddychat.xpm  buddydel.xpm  burp.xpm  cancel.xpm  close.xpm  close_small.xpm  crazy4.xpm  crossedlips.xpm  cry.xpm  (+102 more)
plugins/: .cvsignore  CRAZY  ChangeLog  ChangeLog.API  HOWTO  Makefile  Makefile.am  Makefile.mingw  PERL-HOWTO  SIGNALS  autorecon.c  chatlist.c  chkmail.c  ciphertest.c  codeinline.c  contact_priority.c  dbus-buddyicons-example.py  dbus-example.c  error.c  events.c  extplacement.c  filectl.c  fortuneprofile.pl  gaim.pl  gaiminc.c  gaimrc.c  gtik.c  gtk-signals-test.c  history.c  iconaway.c  idle.c  ipc-test-client.c  ipc-test-server.c  irc.c  lagmeter.c  log_reader.c  mailchk.c  napster.c  notify.c  oscar.c  (+14 more)
po/: .cvsignore  ChangeLog  Makefile.mingw  POTFILES  POTFILES.in  POTFILES.skip  (+109 more)
(+3860 files in other folders)
